# EvolveAgent

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: lint.yml
docker/: docker-compose.override.yaml  docker-compose.yaml
docker/nginx/conf.d/: default.conf.template
evolve_agent/: Dockerfile  Dockerfile.dev  __init__.py  requirements.dev.txt  requirements.txt
evolve_agent/agents/: constants.py  core.py  models.py  prompt.py  rag.py
evolve_agent/app/: __init__.py  config.py  main.py  models.py  services.py  utils.py
evolve_agent/app/agents/: models.py  prompt.py  rag.py
evolve_agent/app/routes/: __init__.py  agent.py  n8n.py  tests.py  workflows.py
evolve_agent/app/schemas/: agent.py  workflow.py
evolve_agent/app/services/: n8n_service.py
evolve_agent/templates/: LLM_With_Webhook.json  credentials.json
evolve_agent/templates/dataset/: Agent_Data_Analyst___Visualisation.json  Agent_Finance_Pr_t.json  Agent_IA_Churn.json  Agent_IA_Factures.json  Agent_IA_Immobilier___Enrichissement_Inventaire_Propri_t_.json  Agent_IA_Projet_Client.json  Agent_Visual_Scraping___HTML.json  Agent_Vocal_Insane.json  Agent_Youtube__Synthese_Notif_Idee_Vid_o_.json  Document_Upload_VectorDatabase___Pinecone.json  GMAIL_Label_Agent___Send_Draft_Mail.json  Multi_Agent_Contenu.json  (+14 more)
evolve_agent/tests/: advanced_workflow.yml  conftest.py  test_workflow.yml
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
(+5 files in other folders)
